--- a/index.html
+++ b/index.html
@@ -1,29 +1,85 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
+<html lang="en" dir="ltr">
+  <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Responsive Menu Bar</title>
+    <title> Responsive Registration Form | ABO PLUS Landing Page </title>
     <link rel="stylesheet" href="./style.css">
-</head>
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   </head>
 <body>
+  <div class="container">
+    <div class="title">
+      <span id="abo_plus" >ABO PLUS</span>   Registration Form
+    </div>
+    <div class="content">
+      <form action="#">
 
-    <header class="header">
-        <a href="#" class="logo">Micheal</a>
+        <div class="user-details">
+          <div class="input-box">
+            <span class="details">Full Name</span>
+            <input type="text" placeholder="Enter your name" id="fulll_name" required>
+          </div>
 
-        <input type="checkbox" class="menu-button" name="checkbox" id="menu-button">
+          <div class="input-box">
+            <span class="details">Username</span>
+            <input type="text" placeholder="Enter your username" id="user_name" required>
+          </div>
 
-        <label class="menu-bars" for="menu-button">
-            <span class="nav-bar"></span>
-        </label>
-        <ul class="menu">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">Works</a></li>
-            <li><a href="#">About Me</a></li>
-            <li><a href="#">Contact Me</a></li>
-        </ul>
-    </header>
-    
+          <div class="input-box">
+            <span class="details">Email</span>
+            <input type="email" id="email" placeholder="Enter your email" required>
+          </div>
+
+          <div class="input-box">
+            <span class="details">Phone Number</span>
+            <input type="number" placeholder="Enter your number" required>
+          </div>
+
+          <div class="input-box">
+            <span class="details">Password</span>
+            <input type="password"     id="password" placeholder="Enter your password" required>
+          </div>
+
+          <div class="input-box">
+            <span class="details">Confirm Password</span>
+            <input type="password"  id="password" placeholder="Confirm your password" required>
+          </div>
+
+        </div>
+
+        <div class="gender-details">
+
+          <input type="radio" name="gender" id="dot-1">
+          <input type="radio" name="gender" id="dot-2">
+          <input type="radio" name="gender" id="dot-3">
+          <span class="gender-title">Gender</span>
+
+          <div class="category">
+            <label for="dot-1">
+            <span class="dot one"></span>
+            <span class="gender">Male</span>
+          </label>
+          <label for="dot-2">
+            <span class="dot two"></span>
+            <span class="gender">Female</span>
+          </label>
+          <label for="dot-3">
+            <span class="dot three"></span>
+            <span class="gender">Prefer not to say</span>
+            </label>
+          </div>
+        </div>
+        <div class="button">
+          <input type="submit" value="Register">
+        </div>
+
+        <div class="have_an_account">
+          <p>Aready have an Account? </p>
+          <a href="./login.html">Login</a>
+      </div>
+      </form>
+    </div>
+  </div>
+
 </body>
 </html>
